--- a/public/index.html
+++ b/public/index.html
@@ -16,5 +16,6 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+    <!-- <script src="../path/to/flowbite/dist/flowbite.min.js"></script> -->
   </body>
 </html>
